[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts1/Robot/Robot1.gd" type="Script" id=1]
[ext_resource path="res://assets/space/Enemies/enemyBlue2.png" type="Texture" id=2]
[ext_resource path="res://scenes/Robot/Area2D.gd" type="Script" id=3]
[ext_resource path="res://assets/misc/health_bar_green.png" type="Texture" id=4]
[ext_resource path="res://assets/misc/health_bar_red.png" type="Texture" id=5]
[ext_resource path="res://assets/sfx/sfx_lose.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/space/Enemies/enemyGreen1.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53.5, 42 )

[node name="Robot_Human" type="KinematicBody2D" groups=["robot_human"]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
centered = false

[node name="Pos" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["robots"]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 52, 44 )
shape = SubResource( 1 )

[node name="DieTimer" type="Timer" parent="."]

[node name="Posit" type="Label" parent="."]
margin_left = -11.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_bar" type="Label" parent="."]
margin_left = 26.0
margin_top = -44.0
margin_right = 76.0
margin_bottom = -28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_bar2" type="TextureProgress" parent="."]
margin_left = -1.0
margin_top = 89.0
margin_right = 110.0
margin_bottom = 99.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Play" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
[connection signal="timeout" from="GodTimer" to="." method="_on_GodTimer_timeout"]
